<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RoFFu</string>
    <string name="no_available_data">No available data</string>
    <string name="net_conn_err_title">Network connection error!</string>
    <string name="no_avail_data_err_title">No available data!</string>
    <string name="unknown_err_title">Unknown error!</string>
    <string name="net_conn_err_message">Please make sure that you are connected to network and try again.</string>
    <string name="no_avail_data_err_body">It seems like there are no data for now, coming soon.</string>
    <string name="unknown_err_body">An unknown error has occurred, please try again.</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="home">Home</string>
    <string name="logout">Log Out</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="continue_next">Continue</string>
    <string name="get_started">Get Started 🔥</string>
    <string name="cart">Giỏ hàng của bạn 👍</string>
    <string name="product_details">Product Details</string>
    <string name="x_VND">%1$s VND</string>
    <string name="discover">Khám phá</string>
    <string name="share">Share</string>
    <string name="empty_cart">Clear cart</string>
    <string name="checkout_now">Checkout now</string>
    <string name="proceed_to_checkout">Thanh toánout</string>
    <string name="checkout">Checkout</string>
    <string name="barcode_scanner">Scanner</string>
    <string name="total">Total</string>
    <string name="favorite">Favorite</string>
    <string name="bookmarks">Yêu thích</string>
    <string name="login">Login</string>
    <string name="privacy_and_policies"><![CDATA[Privacy & Policies]]></string>
    <string name="orders_history">Orders History</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="settings">Settings</string>
    <string name="your_profile">Your Profile</string>
    <string name="sub_total">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="visa">Visa</string>
    <string name="master_card">Master Card</string>
    <string name="pay_now">Pay Now</string>
    <string name="please_select_payment">Pleaes select payment method!</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="onboard">Onboard</string>
    <string name="signup">Sign up</string>
    
    <!-- Additional strings from previous version -->
    <string name="submit">Submit</string>
    <string name="item_image">item_image</string>
    <string name="checklist">Checklist</string>
    <string name="price_check">Price check</string>
    <string name="orders">Orders</string>
    <string name="create_new_group">Create New Group</string>
    <string name="create_new_todo">Create New Todo</string>
    <string name="copy">Copy</string>
    <string name="not_found_in_database">Not found in database!</string>
    <string name="search_in_internet">Search in Internet</string>
    <string name="scan_qr">Scan QR</string>
    <string name="use_this_barcode">Use this barcode</string>
    <string name="barcode">Barcode</string>
    <string name="save">Save</string>
    <string name="see_sellers">See sellers</string>
    <string name="no_ship_address_available">Chưa thiết lập địa chỉ nhận hàng</string>
    <string name="personal_info">Personal Info</string>
    <string name="shopping">Shopping</string>
    <string name="add">Add</string>
    <string name="reset_password">Đặt lại mật khẩu</string>
</resources>